maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:21: error: 'while' expected but '}' found.
}while (sortieTrouvee()) 
^RandomMouseMaze:21: error: ';' expected but 'while' found.
}while (sortieTrouvee()) 
 ^